sys/src/bindings/i686-pc-windows-msvc.rs

                ::std::ptr::addr_of!((*ptr).array_count) as usize - ptr as usize
            },
            168usize,
            concat!(
                "Offset of field: ",
                stringify!(JSMemoryUsage),
                "::",
                stringify!(array_count)
            )
        );
    }
    test_field_array_count();
    fn test_field_fast_array_count() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSMemoryUsage>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).fast_array_count) as usize - ptr as usize
            },
            176usize,
            concat!(
                "Offset of field: ",
                stringify!(JSMemoryUsage),
                "::",
                stringify!(fast_array_count)
            )
        );
    }
    test_field_fast_array_count();
    fn test_field_fast_array_elements() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSMemoryUsage>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).fast_array_elements) as usize - ptr as usize
            },
            184usize,
            concat!(
                "Offset of field: ",
                stringify!(JSMemoryUsage),
                "::",
                stringify!(fast_array_elements)
            )
        );
    }
    test_field_fast_array_elements();
    fn test_field_binary_object_count() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSMemoryUsage>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).binary_object_count) as usize - ptr as usize
            },
            192usize,
            concat!(
                "Offset of field: ",
                stringify!(JSMemoryUsage),
                "::",
                stringify!(binary_object_count)
            )
        );
    }
    test_field_binary_object_count();
    fn test_field_binary_object_size() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSMemoryUsage>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).binary_object_size) as usize - ptr as usize
            },
            200usize,
            concat!(
                "Offset of field: ",
                stringify!(JSMemoryUsage),
                "::",
                stringify!(binary_object_size)
            )
        );
    }
    test_field_binary_object_size();
}
extern "C" {
    pub fn JS_ComputeMemoryUsage(rt: *mut JSRuntime, s: *mut JSMemoryUsage);
}
extern "C" {
    pub fn JS_NewAtomLen(
        ctx: *mut JSContext,
        str_: *const ::std::os::raw::c_char,
        len: size_t,
    ) -> JSAtom;
}
extern "C" {
    pub fn JS_NewAtom(ctx: *mut JSContext, str_: *const ::std::os::raw::c_char) -> JSAtom;
}
extern "C" {
    pub fn JS_NewAtomUInt32(ctx: *mut JSContext, n: u32) -> JSAtom;
}
extern "C" {
    pub fn JS_DupAtom(ctx: *mut JSContext, v: JSAtom) -> JSAtom;
}
extern "C" {
    pub fn JS_FreeAtom(ctx: *mut JSContext, v: JSAtom);
}
extern "C" {
    pub fn JS_FreeAtomRT(rt: *mut JSRuntime, v: JSAtom);
}
extern "C" {
    pub fn JS_AtomToValue(ctx: *mut JSContext, atom: JSAtom) -> JSValue;
}
extern "C" {
    pub fn JS_AtomToString(ctx: *mut JSContext, atom: JSAtom) -> JSValue;
}
extern "C" {
    pub fn JS_AtomToCString(ctx: *mut JSContext, atom: JSAtom) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JS_ValueToAtom(ctx: *mut JSContext, val: JSValue) -> JSAtom;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSPropertyEnum {
    pub is_enumerable: ::std::os::raw::c_int,
    pub atom: JSAtom,
}
#[test]
fn bindgen_test_layout_JSPropertyEnum() {
    assert_eq!(
        ::std::mem::size_of::<JSPropertyEnum>(),
        8usize,
        concat!("Size of: ", stringify!(JSPropertyEnum))
    );
    assert_eq!(
        ::std::mem::align_of::<JSPropertyEnum>(),
        4usize,
        concat!("Alignment of ", stringify!(JSPropertyEnum))
    );
    fn test_field_is_enumerable() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSPropertyEnum>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).is_enumerable) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSPropertyEnum),
                "::",
                stringify!(is_enumerable)
            )
        );
    }
    test_field_is_enumerable();
    fn test_field_atom() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSPropertyEnum>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).atom) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(JSPropertyEnum),
                "::",
                stringify!(atom)
            )
        );
    }
    test_field_atom();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSPropertyDescriptor {
    pub flags: ::std::os::raw::c_int,
    pub value: JSValue,
    pub getter: JSValue,
    pub setter: JSValue,
}
#[test]
fn bindgen_test_layout_JSPropertyDescriptor() {
    assert_eq!(
        ::std::mem::size_of::<JSPropertyDescriptor>(),
        32usize,
        concat!("Size of: ", stringify!(JSPropertyDescriptor))
    );
    assert_eq!(
        ::std::mem::align_of::<JSPropertyDescriptor>(),
        8usize,
        concat!("Alignment of ", stringify!(JSPropertyDescriptor))
    );
    fn test_field_flags() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSPropertyDescriptor>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSPropertyDescriptor),
                "::",
                stringify!(flags)
            )
        );
    }
    test_field_flags();
    fn test_field_value() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSPropertyDescriptor>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).value) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(JSPropertyDescriptor),
                "::",
                stringify!(value)
            )
        );
    }
    test_field_value();
    fn test_field_getter() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSPropertyDescriptor>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).getter) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(JSPropertyDescriptor),
                "::",
                stringify!(getter)
            )
        );
    }
    test_field_getter();
    fn test_field_setter() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSPropertyDescriptor>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).setter) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(JSPropertyDescriptor),
                "::",
                stringify!(setter)
            )
        );
    }
    test_field_setter();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSClassExoticMethods {
    pub get_own_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            desc: *mut JSPropertyDescriptor,
            obj: JSValue,
            prop: JSAtom,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_own_property_names: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            ptab: *mut *mut JSPropertyEnum,
            plen: *mut u32,
            obj: JSValue,
        ) -> ::std::os::raw::c_int,
    >,
    pub delete_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            obj: JSValue,
            prop: JSAtom,
        ) -> ::std::os::raw::c_int,
    >,
    pub define_own_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            this_obj: JSValue,
            prop: JSAtom,
            val: JSValue,
            getter: JSValue,
            setter: JSValue,
            flags: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
    pub has_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            obj: JSValue,
            atom: JSAtom,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            obj: JSValue,
            atom: JSAtom,
            receiver: JSValue,
        ) -> JSValue,
    >,
    pub set_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            obj: JSValue,
            atom: JSAtom,
            value: JSValue,
            receiver: JSValue,
            flags: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
}
